# nancy-plugin-template

./: README.md  pyproject.toml
{{cookiecutter.name}}/: cookiecutter.json  pyproject.toml
{{cookiecutter.name}}/.github/workflows/: ci.yml
{{cookiecutter.name}}/src/nancy_{{cookiecutter.name}}/: plugin.py
