[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "nancy-{{cookiecutter.name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }
]
dependencies = ["nexus-nancy>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.entry-points."nexus_nancy.plugins"]
{{cookiecutter.name}} = "nancy_{{cookiecutter.name}}.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/nancy_{{cookiecutter.name}}"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]